--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
         h1 {
-            color: rgb(0, 0, 0);
+            color: black;
             text-underline-position: below;
             text-align: center;
             font-size: 40px;
