--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 
         <div class="msgbox">
             마스크와 함께한 2020년... <br />
-            올해는 마스크와 제에발 이별하길 바라며 <br />
-            집들이를 가장한 집콕파티를 준비했습니다 <br />
-            사실 거창한건 아니고 그냥 놀다가요 <br />
+            올해는 마스크와 이별하길 바라며 <br />
+            집들이 겸 홈파티를 준비했습니다 <br />
+            사실 거창한건 아니고 놀다가세요 <br />
             <br />
-            일시 및 장소 : 추후 통지 <br />
-            준비물 : alcohol (안주는 내가 준비함) <br />
-            금지 품목 : 휴ㅠ지ㅠ <br />
-            <p class="from"> 집쥔 </p>
+            일시 및 장소 : 1월의 어느날 혜리집 <br />
+            준비물 : 마실 것 (먹을 것은 혜리가 준비해요) <br />
+            금지 품목 : 휴지 <br />
+            <p class="from"> 6=1121 </p>
         </div>
     </div>
 </body>
