--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             사실 거창한건 아니고 놀다가세요 <br />
             <br />
             일시 및 장소 : 1월의 어느날 혜리집 <br />
-            준비물 : 마실 것 (먹을 것은 혜리가 준비해요) <br />
+            준비물 : 마실 것 (먹을 것은 혜리가) <br />
             금지 품목 : 휴지 <br />
             <p class="from"> 6=1121 </p>
         </div>
