--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
         <h1> ✨ 　초　　대　　짱 　🌟 </h1>
 
         <div class="msgbox">
-            마스크와 함께한 2020년... <br />
-            올해는 마스크와 이별하길 바라며 <br />
-            집들이 겸 홈파티를 준비했습니다 <br />
-            사실 거창한건 아니고 놀다가세요 <br />
+            새 집이 내 집 같이 느껴지기 위해선 <br />
+            좋아하는 것들로 채워야 한다 생각해요 <br />
+            그래서 제가 좋아해 마지않는 여러분을 <br />
+            혜리의 새 보금자리에 초대합니다 <br />
             <br />
-            일시 및 장소 : 1월의 어느날 혜리집 <br />
-            준비물 : 마실 것 (먹을 것은 혜리가) <br />
-            금지 품목 : 휴지 <br />
+            일시 : 21/01/17 SUN. <br />
+            장소 : 연희동 51-32 엘림하우스 206호 <br />
+            준비물 : 마실 것 (먹을 것은 혜리가 해요) <br />
+            드레스코드 : 반짝반짝 화려한 공작새 <br />
             <p class="from"> 6=1121 </p>
         </div>
     </div>
