--- a/index.html
+++ b/index.html
@@ -119,16 +119,14 @@
 
         <div class="msgbox">
             새 친구들과 새 시작을 앞둔 지금! <br />
-            재미있는 일들을 함께 하고 싶고, <br />
-            여러분과 더 가까워지고 싶어요. <br />
+            재미있는 일들을 함께 하고 싶고 <br />
+            여러분과 더 가까워지고 싶어요 <br />
             혜리의 저녁식사에 초대합니다 <br />
             <br />
             일시 : 21/03/10 WED. <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />            
-            준비물 : 무엇이든 마실 것 <br />
-                   (먹을 것은 혜리가 해요) <br />
-            드레스코드 : 두 번째로 좋아하는 옷 <br />
-                   (첫 번째는 더러워지면 슬프니까) <br />
+            준비물 : 마실 것 (먹을 것은 혜리가 해요) <br />
+            드레스코드 : 봄옷 <br />
             <p class="from"> 6=1121 </p>
         </div>
     </div>
