--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hell-o everyone</title>
+    <title>Goodbye 2020</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
@@ -115,19 +115,20 @@
     </div>
 
     <div class="letter-open">
-        <h1> ✨ 　초　　대　　장 　🌟 </h1>
+        <h1> 😈👻 halloween party 🎃⚰ </h1>
 
         <div class="msgbox">
-            새 친구들과 새 시작을 앞둔 지금! <br />
-            재미있는 일들을 함께 하고 싶고 <br />
-            여러분과 더 가까워지고 싶어요 <br />
-            혜리의 저녁식사에 초대합니다 <br />
+            trick or treat 🍭🍬 <br />
+            할로윈 그냥 넘어가기 아쉬운, <br />
+            술과 음악과 춤을 사랑하는 여러분을 <br />
+            할로윈 기념 파티에 초대합니다 <br />
             <br />
-            일시 : 21/03/10 WED. <br />
-            장소 : 연희동 51-32 엘림하우스 206호 <br />            
-            준비물 : 마실 것 (먹을 것은 혜리가 해요) <br />
-            드레스코드 : 봄옷 <br />
-            <p class="from"> 6=1121 </p>
+            일시 : 21/10/31 SUN. <br />
+            장소 : 연희동 51-32 엘림하우스 206호 <br />
+            준비물 : 간식 (술과 핑거푸드 제공) <br />
+            드레스코드 : 없음 <br />
+            ※ 초대받지 못한 친구들에게 누설 금지 <br />
+            <p class="from"> @hey.co.kr </p>
         </div>
     </div>
 </body>
