--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         .envelope {
 
-            background-image: url('https://i.pinimg.com/236x/34/d2/9f/34d29f4e48ee007bd8048048621c06f5.jpg');
+            background-image: url('https://i.ytimg.com/vi/031DE4v-IhI/maxresdefault.jpg');
             background-size: cover;
             background-position: center;
 
@@ -32,7 +32,7 @@
         }
 
         .msg {
-            color: black;
+            color: white;
             text-align: center;
             margin-top: 30px;
             font-size: 70px;
