--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodbye 2020</title>
+    <title>happyhalloweenbaby</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
         .msgbox {
             background-color: rgb(252, 231, 174);
             width: 450px;
-            height: 300px;
+            height: 400px;
             margin: auto;
             color: black;
             padding: 30px;
