--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             background-size: cover;
             background-position: center;
 
+            width: 1600px;
+            height: 900px;
+
+            margin: 300px auto auto auto;
+
             cursor: pointer;
         }
 
