--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .msg {
-            color: white;
+            color: black;
             text-align: center;
             margin-top: 30px;
             font-size: 70px;
