--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         .envelope {
 
-            background-image: url('https://i.ytimg.com/vi/031DE4v-IhI/maxresdefault.jpg');
+            background-image: url('https://pbs.twimg.com/profile_images/1335178001374269442/4BragulO_400x400.jpg');
             background-size: cover;
             background-position: center;
 
-            width: 1600px;
-            height: 900px;
+            width: 600px;
+            height: 600px;
 
             margin: 300px auto auto auto;
 
