--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     </div>
 
     <div class="letter-open">
-        <h1> 😈👻 halloween party 🎃⚰ </h1>
+        <h1> 😈👻 Happy Halloween 🎃🎈 </h1>
 
         <div class="msgbox">
-            trick or treat 🍭🍬 <br />
-            할로윈 그냥 넘어가기 아쉬운, <br />
+            trick or treat ! 🍭🍬 <br />
+            할로윈 그냥 넘어가기 아쉬운 <br />
             술과 음악과 춤을 사랑하는 여러분을 <br />
-            할로윈 기념 파티에 초대합니다 <br />
+            할로윈 핑계로 초대합니다 <br />
             <br />
             일시 : 21/10/31 SUN. <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
