--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             background-size: cover;
             background-position: center;
 
-            width: 600px;
-            height: 600px;
+            width: 500px;
+            height: 500px;
 
             margin: 300px auto auto auto;
 
@@ -119,14 +119,14 @@
 
         <div class="msgbox">
             trick or treat ! 🍭🍬 <br />
-            할로윈 그냥 넘어가기 아쉬운 <br />
-            술과 음악과 춤을 사랑하는 여러분을 <br />
-            할로윈 핑계로 초대합니다 <br />
+            할로윈을 그냥 보내기 아쉬운 <br />
+            술과 춤과 밤을 사랑하는 여러분을 <br />
+            할로윈 핑계로 노는 파티에 초대합니다 <br />
             <br />
             일시 : 21/10/31 8pm <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
             준비물 : 간식 (술과 핑거푸드 제공) <br />
-            드레스코드 : 없음 <br />
+            드레스코드 : 없음. 분장 안해도 됨 <br />
             ※ 초대받지 못한 친구들에게 누설 금지 <br />
             <p class="from"> @hey.co.kr </p>
         </div>
