--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <body>
     <div class="letter-close">
         <div class="envelope" onclick="open_letter()"></div>
+        <h1 class="msg"> '할로윈인데 그냥 자기 아쉽다구..' </h1>
         <h2 class="msg"> ↗　↑　↖ </h2>
     </div>
 
