--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
     <div class="letter-close">
         <div class="envelope" onclick="open_letter()"></div>
-        <h1 class="msg"> '할로윈인데 그냥 자기 아쉽다구..' </h1>
+        <h1 class="msg"> '할로윈인데 그냥 자기 몬가 아쉽다구..' </h1>
         <h2 class="msg"> ↗　↑　↖ </h2>
     </div>
 
@@ -124,11 +124,12 @@
             술과 춤과 밤을 사랑하는 여러분을 <br />
             할로윈 핑계로 노는 파티에 초대합니다 <br />
             <br />
-            일시 : 21/10/31 8pm <br />
+            일시 : 21/10/31 8pm~ <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
-            준비물 : 간식 (술과 핑거푸드 제공) <br />
+            준비물 : 저녁 알아서 먹고오기
+                    (위스키 럼 소주 핑거푸드 제공) <br />
             드레스코드 : 없음. 분장 안해도 됨 <br />
-            ※ 초대받지 못한 친구들에게 누설 금지 <br />
+            ※ 초대받지 못한 친구들에게 비밀 지켜주기 <br />
             <p class="from"> @hey.co.kr </p>
         </div>
     </div>
