--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <br />
             일시 : 21/10/31 8pm~ <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
-            준비물 : 저녁 알아서 먹고오기
-                    (위스키 럼 소주 핑거푸드 제공) <br />
+            준비물 : 저녁 알아서 먹고오기 <br />
+                    (갓파더 럼콕 소주 핑거푸드 제공) <br />
             드레스코드 : 없음. 분장 안해도 됨 <br />
             ※ 초대받지 못한 친구들에게 비밀 지켜주기 <br />
             <p class="from"> @hey.co.kr </p>
