--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <body>
     <div class="letter-close">
         <div class="envelope" onclick="open_letter()"></div>
+        <h2 class="msg"> ↗　click　↖ </h2>
         <h1 class="msg"> '할로윈인데 그냥 자기 몬가 아쉽다구..' </h1>
-        <h2 class="msg"> ↗　↑　↖ </h2>
     </div>
 
     <div class="letter-open">
