--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 500px;
             height: 500px;
 
-            margin: 300px auto auto auto;
+            margin: 30px auto auto auto;
 
             cursor: pointer;
         }
@@ -113,7 +113,7 @@
 
         <h1 class="msg"> '할로윈인데 그냥 자기 몬가 아쉽다구..' </h1>
         <div class="envelope" onclick="open_letter()"></div>
-        <h2 class="msg"> ↑　click　↑ </h2>
+        <h2 class="msg"> ↑　↑　↑ </h2>
     </div>
 
     <div class="letter-open">
