--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             술과 춤과 밤을 사랑하는 여러분을 <br />
             할로윈 핑계로 노는 파티에 초대합니다 <br />
             <br />
-            일시 : 21/10/31 8pm~ <br />
+            일시 : 21/10/31 8pm~집가고 싶을 때 <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
             준비물 : 저녁 알아서 먹고오기 <br />
                     (갓파더 럼콕 소주 핑거푸드 제공) <br />
