--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 500px;
             height: 500px;
 
-            margin: 100px auto auto auto;
+            margin: 30px auto auto auto;
 
             cursor: pointer;
         }
@@ -35,6 +35,7 @@
             color: black;
             text-align: center;
             margin-top: 30px;
+            margin-bottom: 30px;
             font-size: 30px;
 
         }
