--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             color: black;
             text-align: center;
             margin-top: 30px;
-            font-size: 30px;
+            font-size: 20px;
 
         }
 
@@ -60,7 +60,7 @@
         .msgbox {
             background-color: rgb(252, 231, 174);
             width: 450px;
-            height: 380px;
+            height: 400px;
             margin: auto;
             color: black;
             padding: 30px;
@@ -129,7 +129,7 @@
             준비물 : 저녁 알아서 먹고오기 <br />
                     (갓파더 럼콕 소주 핑거푸드 제공) <br />
             드레스코드 : 없음. 분장 안해도 됨 <br />
-            ※ 초대받지 못한 친구들에게 비밀 지켜주기 <br />
+            ※ 초대받지 못한 친구들에게 비밀 지기 <br />
             <p class="from"> @hey.co.kr </p>
         </div>
     </div>
