--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             준비물 : 저녁 알아서 먹고오기 <br />
                     (갓파더 럼콕 소주 핑거푸드 제공) <br />
             드레스코드 : 없음. 분장 안해도 됨 <br />
-            ※ 초대받지 못한 친구들에게 비밀 지기 <br />
+            ※ 초대받지 못한 친구들에게 비밀 지키기 <br />
             <p class="from"> @hey.co.kr </p>
         </div>
     </div>
