--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>happyhalloweenbaby</title>
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
 
     <style>
         * {
-            font-family: 'Do Hyeon', sans-serif;
+            font-family: 'Gowun Batang', serif;
         }
 
         body {
+            
+            background-color: midnightblue;
         }
 
         .envelope {
@@ -32,7 +34,7 @@
         }
 
         .msg {
-            color: black;
+            color: whitesmoke;
             text-align: center;
             margin-top: 30px;
             font-size: 20px;
@@ -49,24 +51,25 @@
 
 
         h1 {
-            color: black;
+            color: peru;
             text-underline-position: below;
             text-align: center;
             font-size: 36px;
             margin-bottom: 30px;
+            margin-top: 30px;
 
         }
 
         .msgbox {
-            background-color: rgb(252, 231, 174);
+            background-color: peru;
             width: 450px;
             height: 400px;
             margin: auto;
-            color: black;
+            color: whitesmoke;
             padding: 30px;
-            font-size: 27px;
-            line-height: 30px;
-            box-shadow: 0px 0px 10px 0px rgb(250, 222, 146);
+            font-size: 22px;
+            line-height: 32px;
+            box-shadow: 0px 0px 10px 0px rgb(247, 230, 138);
             margin-bottom: 270px;
             border-radius: 20px;
         }
@@ -110,7 +113,7 @@
 <body>
     <div class="letter-close">
 
-        <h1 class="msg"> '할로윈인데 그냥 자기 몬가 아쉽다구..' </h1>
+        <h1 class="msg"> '할로윈인데 그냥 자기 몬가 아쉽다구...' </h1>
         <div class="envelope" onclick="open_letter()"></div>
         <h2 class="msg"> ↑　↑　↑ </h2>
     </div>
@@ -119,10 +122,10 @@
         <h1> 😈👻 Happy Halloween 🎃🎈 </h1>
 
         <div class="msgbox">
-            trick or treat ! 🍭🍬 <br />
+            Trick or treat ! 🍭🍬 <br />
             할로윈을 그냥 보내기 아쉬운 <br />
             술과 춤과 밤을 사랑하는 여러분을 <br />
-            할로윈 핑계로 노는 파티에 초대합니다 <br />
+            할로윈 핑계로 노는 파티에 초대합니다♡ <br />
             <br />
             일시 : 21/10/31 8pm~집가고 싶을 때 <br />
             장소 : 연희동 51-32 엘림하우스 206호 <br />
