--- a/index.html
+++ b/index.html
@@ -80,13 +80,19 @@
         }
 
         @media screen and (max-width: 600px) {
+            
+            .envelope {
+                width: 360px;
+                height: 360px;
+            }
+
             h1 {
                 font-size: 20px;
             }
 
             .msgbox {
                 width: 270px;
-                height: 700px;
+                height: 720px;
                 font-size: 18px;
             }
 
