--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .envelope {
 
-            background-image: url(https://postfiles.pstatic.net/MjAyMTEyMjNfMTM0/MDAxNjQwMjM5ODA2ODE4.zLO_j7RL6vOHPZV_wTEf0OdQVh2NDn35jNwHK5XaLB4g.2rv-Pu-JQ-Y_UU3Wnh8NEH9k4GRiTcrZU5gA7mMlN4gg.JPEG.l__h__l__/%ED%95%A0%EB%A1%9C%EC%9C%88_1.jpg);
+            background-image: url('https://postfiles.pstatic.net/MjAyMTEyMjNfMTM0/MDAxNjQwMjM5ODA2ODE4.zLO_j7RL6vOHPZV_wTEf0OdQVh2NDn35jNwHK5XaLB4g.2rv-Pu-JQ-Y_UU3Wnh8NEH9k4GRiTcrZU5gA7mMlN4gg.JPEG.l__h__l__/%ED%95%A0%EB%A1%9C%EC%9C%88_1.jpg?type=w966');
             background-size: cover;
             background-position: center;
             width: 750px;
@@ -60,7 +60,7 @@
         }
 
         .msgbox {
-            background-image: url("https://postfiles.pstatic.net/MjAyMTEyMjNfMjQ2/MDAxNjQwMjM5ODA2NzMz.GdI9qUamUd4lqRQfAicbkPkv1S5pVaY4ZMAWQs07yUog.4358X_ppg2VrkzUNVctZqDEbYpmSadvAl7Ma17l4Vl8g.JPEG.l__h__l__/%ED%95%A0%EB%A1%9C%EC%9C%88_4.jpg?type=w966");
+            background-image: url('https://postfiles.pstatic.net/MjAyMTEyMjNfMjQ2/MDAxNjQwMjM5ODA2NzMz.GdI9qUamUd4lqRQfAicbkPkv1S5pVaY4ZMAWQs07yUog.4358X_ppg2VrkzUNVctZqDEbYpmSadvAl7Ma17l4Vl8g.JPEG.l__h__l__/%ED%95%A0%EB%A1%9C%EC%9C%88_4.jpg?type=w966');
             background-size: cover;
             background-position: center;
             margin: auto auto auto auto;
@@ -82,7 +82,7 @@
             color: whitesmoke;
             text-align: center;
             margin-top: 30px;
-            margin-left: 600px;
+            margin-left: 550px;
             font-size: 20px;
         }
 
@@ -123,7 +123,7 @@
         <div class="envelope" onclick="open_letter()"></div>
 
         <h1 class="msg"> I take a halloween party for you guys ! </h1>
-        <h2 class="msg"> ↑↑↑ Click this pic if you want to attend ↑↑↑ </h2>
+        <h2 class="from"> ↑ Click this pic ↑ </h2>
     </div>
 
     <div class="letter-open">
