--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         .msgbox {
-            background-image: url('https://postfiles.pstatic.net/MjAyMTEyMjNfMjQ2/MDAxNjQwMjM5ODA2NzMz.GdI9qUamUd4lqRQfAicbkPkv1S5pVaY4ZMAWQs07yUog.4358X_ppg2VrkzUNVctZqDEbYpmSadvAl7Ma17l4Vl8g.JPEG.l__h__l__/%ED%95%A0%EB%A1%9C%EC%9C%88_4.jpg?type=w966');
+            background-image: url('https://ifh.cc/g/t32lzC.jpg');
             background-size: cover;
             background-position: center;
             margin: auto auto auto auto;
