--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
             cursor: pointer;
         }
         
-                :hover .envelope {
-            background-image: url('https://ifh.cc/g/927Bza.jpg');
+                .envelope:hover{
+
+            background-image: url('https://ifh.cc/g/927Bza.jpg') ;
+            background-size: cover;
+            background-position: center;
+            width: 750px;
+            height: 1080px;
+            margin: auto auto auto auto;
         }
 
 
