--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .envelope {
 
-            background-image: url('https://ifh.cc/g/CxAvtE.jpg');
+            background-image: url('https://ifh.cc/g/qAilIG.jpg');
             background-size: cover;
             background-position: center;
             width: 750px;
@@ -33,7 +33,7 @@
         
                 .envelope:hover{
 
-            background-image: url('https://ifh.cc/g/927Bza.jpg') ;
+            background-image: url('https://ifh.cc/g/YiI4dn.jpg') ;
             background-size: cover;
             background-position: center;
             width: 750px;
@@ -71,7 +71,7 @@
         }
 
         .msgbox {
-            background-image: url('https://ifh.cc/g/t32lzC.jpg');
+            background-image: url('https://ifh.cc/g/lbtQNo.jpg');
             background-size: cover;
             background-position: center;
             margin: auto auto auto auto;
@@ -173,8 +173,8 @@
             <br />
             　　일시 : 21/10/31 8pm~집가고 싶을 때 <br />
             　장소 : - <br />
-            준비물 : 위와 간 (술과 핑거푸드 제공) <br />
-            드레스코드 : 분장 안해도 OK <br />   
+            준비물 : 위, 간 (술과 안주 제공) <br />
+            드레스코드 : 분장 마음대로 OK <br />   
             </p> 
         </div>
         <h1> 😈👻 Happy Halloween 🎃🎈 </h1>
