--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             font-size: 20px;
             font-weight: bolder;
             line-height: 35px;
-            margin-left: 120px;
+            margin-left: 100px;
 
         }
 
@@ -112,7 +112,7 @@
             }
 
             .msgbox {                
-                margin: 200px auto auto auto;
+                margin: auto auto auto auto;
             }
             
             .from {
@@ -125,7 +125,7 @@
             }
 
             .envelope {
-                margin: 200px auto auto auto;
+                margin: auto auto auto auto;
             }
         }
     
@@ -146,8 +146,8 @@
 
         <div class="envelope" onclick="open_letter()"></div>
 
-        <h1 class="msg"> I take a halloween party for you guys ! </h1>
-        <h2 class="from"> ↑ Click this pic ↑ </h2>
+        <h1 class="msg"> ↑ Click this pic ↑ </h1>
+        <h2 class="from"> </h2>
     </div>
 
     <div class="letter-open">
@@ -179,7 +179,7 @@
         </div>
         <h1> 😈👻 Happy Halloween 🎃🎈 </h1>
 
-        <h2 class="from"> @hey.co.kr </p>
+        <h2 class="from"> </p>
     </div>
 </body>
 
