--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             font-size: 20px;
             font-weight: bolder;
             line-height: 35px;
-            margin-left: 100px;
+            margin-left: 90px;
 
         }
 
@@ -146,7 +146,8 @@
 
         <div class="envelope" onclick="open_letter()"></div>
 
-        <h1 class="msg"> ↑ Click this pic ↑ </h1>
+        <h1 class="msg"> Shall we gonna holloween party? 
+          <br /> ↑ Click this pic ↑ </h1>
         <h2 class="from"> </h2>
     </div>
 
@@ -154,8 +155,6 @@
         
         <div class="msgbox">
             <p class="msgtxt">
-                <br />
-                <br />
                 <br />
                 <br />
                 <br />
