--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             background-position: center;
             width: 750px;
             height: 1080px;
-            margin: auto auto auto auto;
+            margin: 0px auto auto auto;
 
             cursor: pointer;
         }
@@ -38,7 +38,7 @@
             background-position: center;
             width: 750px;
             height: 1080px;
-            margin: auto auto auto auto;
+            margin: 0px auto auto auto;
         }
 
 
@@ -74,7 +74,7 @@
             background-image: url('https://ifh.cc/g/lbtQNo.jpg');
             background-size: cover;
             background-position: center;
-            margin: auto auto auto auto;
+            margin: 0px auto auto auto;
             width: 750px;
             height: 1080px;
         }
