--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <div class="envelope" onclick="open_letter()"></div>
 
-        <h1 class="msg"> Shall we gonna holloween party? 
+        <h1 class="msg"> Shall we gonna halloween party? 
           <br /> ↑ Click this pic ↑ </h1>
         <h2 class="from"> </h2>
     </div>
@@ -171,7 +171,7 @@
             　　할로윈 핑계로 노는 파티에 초대합니다. <br />
             <br />
             　　일시 : 21/10/31 8pm~집가고 싶을 때 <br />
-            　장소 : - <br />
+            　장소 : 서울시 서대문구 연희동 51- <br />
             준비물 : 위, 간 (술과 안주 제공) <br />
             드레스코드 : 분장 마음대로 OK <br />   
             </p> 
