--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         
         .msgtxt {
             color: rgb(31, 207, 193);
-            text-align: center;
+            text-align: left;
             font-size: 20px;
             font-weight: bolder;
             line-height: 35px;
-            margin-left: 90px;
+            margin-left: 30px;
 
         }
 
