--- a/index.html
+++ b/index.html
@@ -160,10 +160,6 @@
                 <br />
                 <br />
                 <br />
-                <br />
-                <br />
-                <br />
-                <br />
 
                 　　　Trick or treat👻<br />
             　　할로윈을 그냥 보내기 아쉬운 <br />
@@ -173,7 +169,7 @@
             　　일시 : 21/10/31 8pm~집가고 싶을 때 <br />
             　장소 : 서울시 서대문구 연희동 51- <br />
             준비물 : 위, 간 (술과 안주 제공) <br />
-            드레스코드 : 분장 마음대로 OK <br />   
+            드레스코드 : 분장 OK <br />   
             </p> 
         </div>
         <h1> 😈👻 Happy Halloween 🎃🎈 </h1>
