--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                 <br />
                 <br />
 
-                　　　Trick or treat👻<br />
+                Trick or treat👻<br />
             　　할로윈을 그냥 보내기 아쉬운 <br />
             　　술과 춤과 밤을 사랑하는 여러분을 <br />
-            　　할로윈 핑계로 노는 파티에 초대합니다. <br />
+            　　할로윈 홈 파티에 초대합니다. <br />
             <br />
-            　　일시 : 21/10/31 8pm~집가고 싶을 때 <br />
-            　　장소 : 서울시 서대문구 연희동 51- <br />
-            　　준비물 : 위, 간 (술과 안주 제공) <br />
+            　　일시 : 21/10/31 8pm~ <br />
+            　　장소 : 서대문구 연희동 51- <br />
+            　　준비물 : 간 (술 무제한 제공) <br />
             　　드레스코드 : 분장 OK <br />   
             </p> 
         </div>
