--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
             .msgbox {                
                 margin: auto auto auto auto;
+                width: 400px;
+                height: 1080px;
             }
             
             .from {
@@ -126,6 +128,8 @@
 
             .envelope {
                 margin: auto auto auto auto;
+                width: 400px;
+                height: 1080px;
             }
         }
     
