--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
                 height: 1080px;
             }
             
+            .msgtxt {
+            font-size: 10px;
+            line-height: 18px;
+            margin-left: 8px;
+
+        }
+            
             .from {
                 font-size: 10px;
                 text-align: right;
